Security/05-JWT-and-Keycloak/04-routeconfig-for-services/fe-proxy/virtualservice-proxy.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: proxy
  namespace: default
spec:
  hosts:
  - "fe.magedu.com"
  gateways:
  - istio-system/proxy-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: oauth2-proxy.oauth2-proxy.svc.cluster.local
        port:
          number: 4180 
  - name: default
    route:
    - destination:
        host: proxy
        port:
          number: 80 
---
